Fixed em padding and increased paragraph spacing

--- a/sass/screen.scss
+++ b/sass/screen.scss
@@ -112,7 +112,7 @@ article {
 
   em {
   	font-style: italic;
-  	padding: 3%;
+  	padding: 3% 0%;
   }
 
   a {
@@ -131,7 +131,7 @@ article {
 
   p {
   	padding: 2% 0%;
-  	line-height: 1.1em;
+  	line-height: 1.25em;
   }
 
 }
